<resources>
    <string name="app_name">Examen_Alex_Ramos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="contacte">Contacte</string>
    <string name="nom">Nom</string>
    <string name="preu">preu</string>
    <string name="inserir">Inserir</string>
    <string name="moble_seleccionat">Moble seleccionat:</string>
    <string name="afegir">Afegir</string>
    <string name="llistar">Llistar</string>
    <string name="producte_seleccionat">Producte seleccionat: %1$s</string>
    <string name="preu_del_producte">Preu del producte: %1$s €</string>
    <string name="nom_dospunts">Nom:</string>
    <string name="preu_dospunts">Preu:</string>
    <string name="nom_variable">Nom: %1$s</string>
    <string name="preu_variable">Preu: %1$s €</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>