<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewSelectedItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom_dospunts"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preu_dospunts"
            android:textSize="18sp" />


        <Button
            android:id="@+id/buttonBackToHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />

    </LinearLayout>
</layout>
